--- a/Components/Layout/LoginLayout.razor
+++ b/Components/Layout/LoginLayout.razor
@@ -6,10 +6,10 @@
 <MudSnackbarProvider />
 
 <MudLayout>
-    <MudAppBar>
+    <MudAppBar Elevation="5">
         CCC Rugby Web
     </MudAppBar>
-    <MudMainContent>
+    <MudMainContent Class="d-flex justify-center align-center" Style="height: calc(100vh - 64px);">
         @Body
     </MudMainContent>
 </MudLayout>
