--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -16,3 +16,5 @@
 @using CCC_Rugby_Web.DTOs
 @using CCC_Rugby_Web.Security
 @using CCC_Rugby_Web.Components.Layout
+@using CCC_Rugby_Web.Components.Utils
+@using static CCC_Rugby_Web.Services.Constants;
