Arreglos en el menu

--- a/Components/Pages/Ventas/Empanadas.razor
+++ b/Components/Pages/Ventas/Empanadas.razor
@@ -5,7 +5,11 @@
 @inject HttpClient httpClient
 
 <CustomView Roles="Empanadas">
-    
+    <MudPaper>
+        <MudContainer>
+            <MudText></MudText>
+        </MudContainer>
+    </MudPaper>
 </CustomView>
 
 
