--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -93,7 +93,7 @@
                            Color="Color.Inherit"
                            StartIcon="@Icons.Material.Filled.Logout"
                            FullWidth="true"
-                           Onclick="@LogOut">
+                           OnClick="@LogOut">
                     Cerrar Sesion
                 </MudButton>
                 <MudDivider Style="max-height:1px" />
