Correccion alto login

--- a/Components/Auth/Login.razor
+++ b/Components/Auth/Login.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager navManager
 @inject HttpClient httpClient
 
-<MudPaper Style="width: 90%; height: 90%" MaxWidth="400px" MaxHeight="600px">
+<MudPaper Style="width: 90%; height: 90%; min-height:550px;" MaxWidth="500px" MaxHeight="700px">
     <MudContainer Style="height:100%; width:100%; display:flex; flex-direction:column;">
         <br/>
         <MudText Align="Align.Center" Typo="Typo.h3">Iniciar Sesion</MudText>
