Cambios en el MainMenu

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -49,7 +49,8 @@
         
         </MudAppBar>
         <MudDrawer @bind-Open="@_open"
-                   Elevation="1">
+                   Elevation="1"
+                   Variant="DrawerVariant.Temporary">
             <MudDrawerHeader>
                 <MudImage Alt="Logo del Club Ciudad de Campana"
                           Src="images/ciudad_de_campana.png"
