Centrar todos los layout

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -107,8 +107,8 @@
                 </MudButton>
             </MudNavMenu>
         </MudDrawer>
-        <MudMainContent Class="d-flex flex-column" Style="height:100%; flex:1 1 auto; min-height:0;">
-            <MudContainer Class="mt-6" Style="height:100%; display:flex; flex-direction:column; justify-content:center;">
+        <MudMainContent>
+            <MudContainer Class="d-flex justify-center align-center" Style="height: calc(100vh - 64px);">
                 @Body
             </MudContainer>
         </MudMainContent>
