--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
 @using CCC_Rugby_Web
@@ -13,6 +14,7 @@
 @using MudBlazor.Services
 @using CCC_Rugby_Web.Services
 @using CCC_Rugby_Web.Models
+@using CCC_Rugby_Web.Models.Entityes
 @using CCC_Rugby_Web.DTOs
 @using CCC_Rugby_Web.Security
 @using CCC_Rugby_Web.Components.Layout
