--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,7 +3,8 @@
 @attribute [Authorize]
 
 <PageTitle>Home</PageTitle>
-
+<MudDivider/>
 <h1>Hello, world!</h1>
+<MudDivider/>
 
 Welcome to your new app.
